--- a/CSS/password_recovery.css
+++ b/CSS/password_recovery.css
@@ -27,9 +27,9 @@ html {
     place-items: center;
 }
 
-.form-container {
+.main-container {
     display: grid;
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows: auto;
     width: 30rem;
 }
 
@@ -41,9 +41,11 @@ html {
 }
 
 .title {
+    color: var(--black);
     font-size: var(--lg);
     margin-bottom: 1.2rem;
     text-align: center;
+
 }
 
 .subtitle {
@@ -55,25 +57,8 @@ html {
     text-align: center;
 }
 
-.form {
-    display: flex;
-    flex-direction: column;
-}
-
-.label {
-    font-size: var(--sm);
-    font-weight: bold;
-    margin-bottom: 0.4rem;
-}
-
-.input {
-    background-color: var(--text-input-field);
-    border: none;
-    border-radius: 0.8rem;
-    height: 3rem;
-    font-size: var(--md);
-    padding: 2.2rem;
-    margin-bottom: 1.5rem;
+.simbol-email {
+    justify-self: center;
 }
 
 .primary-button {
@@ -82,14 +67,25 @@ html {
     border-radius: 0.8rem;
     width: 100%;
     height: 5rem;
-    font-size: var(--md);
     color: var(--white);
+    font-size: var(--md);
     font-weight: bold;
     cursor: pointer;
     margin-top: 1.4rem;
 }
+.text {
+    font-size: var(--sm);
+    margin-top: 3.5rem;
+    text-align: center;
+}
 
-@media (max-width : 520px){
+.text a{
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--hospital-green);
+}
+
+@media (max-width: 520px) {
     .logo{
         display: block;
     }
